[gd_scene load_steps=16 format=4 uid="uid://kvwh6ycn6v1h"]

[ext_resource type="Script" path="res://assets/data/Menus/menu_salir_juego.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cqskarntl3n54" path="res://assets/images/menuElements/exit_confirmation2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dsr7wbb47jl6k" path="res://assets/images/menuElements/buttons_tile.png" id="3"]
[ext_resource type="Shader" path="res://assets/data/Shaders/Profundidad.gdshader" id="4"]
[ext_resource type="PackedScene" uid="uid://q1e66hhle40r" path="res://assets/audio/fx/sfx_node.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://dv2x7x7kgcthd" path="res://assets/audio/fx/win/click.ogg" id="6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_80t6a"]
atlas = ExtResource("3")
region = Rect2(14, 5, 32, 39)
margin = Rect2(1, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsxl8"]
atlas = ExtResource("3")
region = Rect2(66, 0, 46, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_60kej"]
atlas = ExtResource("3")
region = Rect2(128, 6, 44, 38)
margin = Rect2(1, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a5al"]
atlas = ExtResource("3")
region = Rect2(180, 2, 58, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7sdlg"]
shader = ExtResource("4")
shader_parameter/amount = 1.5

[sub_resource type="Gradient" id="Gradient_yfwgu"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_utbd4"]
gradient = SubResource("Gradient_yfwgu")

[sub_resource type="Gradient" id="Gradient_hkhj5"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vf0mj"]
gradient = SubResource("Gradient_hkhj5")
width = 1920
height = 1080
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1.58, 0)

[node name="menu_salir_juego" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Menu" type="Sprite2D" parent="CanvasLayer"]
z_index = 1
position = Vector2(960, 540)
scale = Vector2(2, 2)
texture = ExtResource("2")
region_enabled = true
region_rect = Rect2(112, 16, 288, 336)
metadata/_edit_lock_ = true

[node name="Boton_Si" type="TextureButton" parent="CanvasLayer/Menu"]
anchors_preset = -1
anchor_left = 0.166667
anchor_top = 0.744048
anchor_right = 0.277778
anchor_bottom = 0.860119
offset_left = -144.0
offset_top = -168.0
offset_right = -144.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_80t6a")
texture_pressed = SubResource("AtlasTexture_80t6a")
texture_hover = SubResource("AtlasTexture_jsxl8")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Boton_No" type="TextureButton" parent="CanvasLayer/Menu"]
anchors_preset = -1
anchor_left = 0.684028
anchor_top = 0.745536
anchor_right = 0.836806
anchor_bottom = 0.858631
offset_left = -144.0
offset_top = -168.0
offset_right = -144.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = SubResource("AtlasTexture_60kej")
texture_pressed = SubResource("AtlasTexture_60kej")
texture_hover = SubResource("AtlasTexture_1a5al")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Fondo_Borroso" type="Sprite2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_7sdlg")
position = Vector2(960, 544)
scale = Vector2(30, 17)
texture = SubResource("GradientTexture2D_utbd4")
metadata/_edit_lock_ = true

[node name="Oscuridad" type="Sprite2D" parent="CanvasLayer/Fondo_Borroso"]
position = Vector2(0, -0.117643)
scale = Vector2(0.0333333, 0.0590414)
texture = SubResource("GradientTexture2D_vf0mj")
metadata/_edit_lock_ = true

[node name="sfx_node" parent="." instance=ExtResource("5")]
stream = ExtResource("6")

[connection signal="pressed" from="CanvasLayer/Menu/Boton_Si" to="." method="_on_boton_si_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/Boton_No" to="." method="_on_boton_no_pressed"]
